--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "module-13-challenge-orm",
+  "name": "develop",
   "version": "1.0.0",
-  "description": "",
+  "description": "a working Express.js API and configure it to use Sequelize to interact with a MySQL database.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "git+https://github.com/Neeko623/ORM-Ecommerce.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "ORM"
+  ],
+  "author": "HUI SHAN TANG",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.3"
+  "bugs": {
+    "url": "https://github.com/Neeko623/ORM-Ecommerce/issues"
   },
+  "homepage": "https://github.com/Neeko623/ORM-Ecommerce#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0"
   }
 }
